<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#433F3F"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="30dp"
        >

        <TextView
            android:id="@+id/equation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/workingsTV"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:inputType="number"
            android:hint="@string/enter_equation"
            android:clickable="false"
            />

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonss"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:inputType="number"
            android:hint="0"
            android:clickable="false"


            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonss"
        android:orientation="vertical"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >


            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/button_AC"
                android:text="@string/ac"
                android:layout_weight="2"
                android:textSize="28sp"
                android:textColor="@color/white"
                />

            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/button_left_bracket"
                android:text="@string/left_brace"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />

            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/divide"
                android:text="@string/divide"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="ExtraText">


            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:layout_weight="1"
                android:id="@+id/b7"
                android:text="@string/_7"
                android:textSize="28sp"
                android:textColor="@color/white"
                />

            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:layout_weight="1"
                android:id="@+id/b8"
                android:text="@string/_8"
                android:textSize="28sp"
                android:textColor="@color/white"

                />
            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:layout_weight="1"
                android:id="@+id/b9"
                android:text="@string/_9"
                android:textSize="28sp"
                android:textColor="@color/white"

                />
            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/mul"
                android:text="@string/multiply"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >


            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/b4"
                android:text="@string/_4"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />

            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/b5"
                android:text="@string/_5"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"
                />
            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/b6"
                android:text="@string/_6"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />
            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/sub"
                android:text="@string/minus"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"    >


            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/b1"
                android:text="@string/_1"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textColor="@color/white"

                />

            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/b2"
                android:text="@string/_2"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />
            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/b3"
                android:text="@string/_3"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />
            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/add"
                android:text="@string/plus"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"    >


            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:text="@string/_0"
                android:id="@+id/b0"
                android:layout_weight="1"
                android:textSize="28sp"
                android:textColor="@color/white"

                />

            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/piont"
                android:text="@string/point"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textColor="@color/white"

                />

            <Button
                style= "@style/buttonNum"
                app:cornerRadius= "40dp"
                android:id="@+id/equal"
                android:text="@string/equals"
                android:textSize="28sp"
                android:layout_weight="2"
                android:textColor="@color/white"

                />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>